Fix text alignment of number columns

--- a/src/sao.less
+++ b/src/sao.less
@@ -99,11 +99,13 @@
 }
 
 .form-integer, .form-float, .form-float-time,
-.column-integer, .column-float, .column-float_time,
 .editabletree-integer, .editabletree-float, .editabletree-float_time {
     & input {
         text-align: right;
     }
+}
+.column-integer, .column-float, .column-float_time {
+    text-align: right;
 }
 
 .form-boolean {
